--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@next/font": "^13.1.1",
     "@sanity/demo": "^1.0.1",
+    "@sanity/scheduled-publishing": "^1.1.1",
     "@sanity/vision": "^3.1.4",
     "@tailwindcss/typography": "^0.5.8",
     "next": "^13.1.1",
