--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@next/font": "^13.1.1",
-    "@sanity/demo": "^1.0.1",
+    "@next/font": "^13.4.10",
+    "@sanity/demo": "^1.0.2",
     "@sanity/scheduled-publishing": "^1.1.1",
-    "@sanity/vision": "^3.1.4",
-    "@tailwindcss/typography": "^0.5.8",
-    "next": "^13.1.1",
-    "next-sanity": "^3.1.9",
+    "@sanity/vision": "^3.14.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "next": "^13.4.10",
+    "next-sanity": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rxjs": "^7.8.0",
-    "sanity": "^3.1.4",
-    "sanity-plugin-workflow": "^1.0.0-beta.1",
-    "styled-components": "^5.3.6"
+    "rxjs": "^7.8.1",
+    "sanity": "^3.14.3",
+    "sanity-plugin-workflow": "^1.0.1",
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "13.0.8-canary.5",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "prettier-plugin-packagejson": "^2.3.0",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "@types/react": "^18.2.15",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "13.4.10",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "prettier-plugin-packagejson": "^2.4.5",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=16"
